<resources>
    <string name="app_name">Pothole Detector</string>
    <string name="api_key">AIzaSyCkQa0ejVz29HY9S3tk5wmxWKM9sQHDhz0</string>

    <!-- Language -->
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="vietnamese">Vietnamese</string>

    <!-- Common -->
    <string name="continue_text">Continue</string>
    <string name="back">Back</string>

    <!-- Sign In -->
    <string name="sign_in">Sign In</string>
    <string name="welcome_back">Hi! Welcome back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="no_account">Don\'t have account? Sign Up</string>
    <string name="no_account_sign_up">Sign Up</string>

    <!-- Reset Password -->
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_message">Your new password must be different \nfrom previously used passwords.</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="reset">Reset</string>

    <!-- Forget Password -->
    <string name="forget_password_title">Forget Password</string>
    <string name="forget_password_message">Forgot your password?\nEnter your email to reset it</string>

    <!-- Enter OTP -->
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_otp_message">Enter the OTP code we just sent \nyou on your registered Email</string>
    <string name="resend_otp">Didn\'t get OTP? Resend OTP</string>

    <!-- Home -->
    <string name="hi_user">Hi!</string>
    <string name="total_potholes_detected">Total potholes detected</string>
    <string name="distance_traveled">Total potholes encountered</string>
    <string name="today">Today</string>
    <string name="recent">Recent</string>
    <string name="confirm_potholes">New detected pothole, tap to confirm</string>
    <string name="new_potholes">New potholes</string>

    <!-- Profile -->
    <string name="appearance">Appearance</string>
    <string name="notification">Notification</string>
    <string name="log_out">Log Out</string>

    <!-- Appearance -->
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="system">System</string>

    <!-- Notification -->
    <string name="on">On</string>
    <string name="off">Off</string>

    <!-- Map -->
    <string name="map_view">Map View</string>

    <!-- Report -->
    <string name="weekly_report">Weekly Report</string>
    <string name="total_potholes_weekly">Total potholes in the week</string>
    <string name="potholes_per_day">Potholes per Day</string>
    <string name="detected">Detected:</string>
    <string name="encountered">Encountered:</string>
    <string name="total">Total:</string>


    <!-- Create Account -->
    <string name="create_account">Create Account</string>
    <string name="create_account_sub">Fill your information below or register \nwith your social account</string>
    <string name="name">Name</string>
    <string name="or">Or</string>
    <string name="gmail">Gmail</string>
    <string name="agree_privacy_policy">I’m agree to The Terms of Service and Privacy Policy</string>
    <string name="create_account_next">Create Account</string>
    <string name="sign_in_account_ques">Do you have account? Sign In</string>

    <!-- Logout -->
    <string name="logout_message">Are you sure you want to log out? You\'ll \nneed to login again to use the app.</string>
    <string name="button_cancel">Cancel</string>

    <!-- Navigation -->
    <string name="nav_home">Home</string>
    <string name="nav_map">Map</string>
    <string name="nav_report">Report</string>
    <string name="nav_profile">Profile</string>

    <!-- Settings -->
    <string name="setting_notifications">Notifications</string>
    <string name="setting_appearance">Appearance</string>
    <string name="setting_language">Language</string>
    <string name="setting_privacy">User</string>
    <string name="setting_storage">Sensor</string>

    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>

    <!-- PotHole Item -->
    <string name="detect">Detect</string>

    <string name="client_id">1084624321365-ucd02hr6g8k2cotc1tbq5uugu7nt3bmh.apps.googleusercontent.com</string>

    <string name="facebook_app_id">537338769095761</string>
    <string name="fb_login_protocol_scheme">fb537338769095761</string>
    <string name="facebook_client_token">61c8deee4ee37cdcf3e98b94af98c9c3</string>
</resources>

