<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".Frontend.Activity.ResetPasswordActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarResetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/baseline_arrow_back_24" />

    <TextView
        android:id="@+id/tvResetPasswordTitle"
        android:text="@string/reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        android:textColor="?attr/colorPrimary"
        android:textSize="32sp"
        android:layout_marginTop="110dp" />

    <TextView
        android:id="@+id/tvResetPasswordSub"
        android:text="@string/reset_password_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvResetPasswordTitle"
        android:textColor="?attr/subTextColor"
        android:layout_marginTop="20dp"
        android:textAlignment="center" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResetPasswordSub"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="30dp"
        app:hintTextColor="?attr/colorPrimary"
        app:passwordToggleEnabled="true"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editResetPassword_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/small_border"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:textColorHint="#7C8BA0" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLayout"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="16dp"
        app:hintTextColor="?attr/colorPrimary"
        app:passwordToggleEnabled="true"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editResetPassword_ConfirmPassword"
            android:hint="@string/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#7C8BA0"
            android:inputType="textPassword"
            android:background="@drawable/small_border" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnResetNext"
        android:text="@string/reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordLayout"
        android:layout_marginTop="44dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="20sp"
        android:background="@drawable/small_border"
        android:backgroundTint="?attr/colorPrimary"
        android:drawablePadding="10dp"
        android:shadowColor="?attr/colorPrimary"
        android:textAllCaps="false" />

</androidx.constraintlayout.widget.ConstraintLayout>