<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".Activity.SignInActivity">

    <TextView
        android:id="@+id/tvSignInAccountTitle"
        android:text="@string/sign_in"
        android:textColor="?attr/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        android:textSize="32sp"
        android:layout_marginTop="110dp" />

    <TextView
        android:id="@+id/tvSignInAccountSub"
        android:text="@string/welcome_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?attr/subTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSignInAccountTitle"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textAlignment="center" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignInByFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSignInAccountSub"
        android:layout_marginTop="28dp"
        android:layout_marginLeft="50dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="Facebook"
        android:fontFamily="sans-serif-condensed"
        android:textColor="?attr/mainTextColor"
        android:textAlignment="textStart"
        android:textSize="16dp"
        android:background="@drawable/small_border"
        android:drawableLeft="@drawable/facebook"
        android:drawablePadding="10dp"
        android:textAllCaps="false" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignInByGmail"
        android:text="@string/gmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSignInAccountSub"
        android:layout_marginTop="28dp"
        android:layout_marginRight="50dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="36dp"
        android:fontFamily="sans-serif-condensed"
        android:textColor="?attr/mainTextColor"
        android:textAlignment="textStart"
        android:textSize="16dp"
        android:background="@drawable/small_border"
        android:drawableLeft="@drawable/google"
        android:drawablePadding="10dp"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/tvOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/btnSignInByFacebook"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp"
        android:text="@string/or"
        android:textSize="16sp"
        android:background="@drawable/round_border"
        android:elevation="1dp"
        android:padding="8dp"
        android:backgroundTint="?attr/subBackgroundColorBlue" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        app:layout_constraintTop_toTopOf="@id/tvOr"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:background="@color/light_sub_background_color_gray"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOr"
        android:layout_marginTop="16dp"
        app:hintTextColor="@color/light_primary_color"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editSignInEmail"
            android:layout_width="match_parent"
            android:textColorHint="#7C8BA0"
            android:layout_height="wrap_content"
            android:background="@drawable/small_border"
            android:hint="Email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLayout"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="16dp"
        app:hintTextColor="@color/light_primary_color"
        app:passwordToggleEnabled="true"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editSignInPassword"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#7C8BA0"
            android:inputType="textPassword"
            android:background="@drawable/small_border" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvForgetPasswordNext"
        android:text="@string/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLayout"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/light_primary_color" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignInNext"
        android:text="@string/sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLayout"
        android:layout_marginTop="44dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="20sp"
        android:background="@drawable/small_border"
        android:backgroundTint="?attr/colorPrimary"
        android:drawablePadding="10dp"
        android:shadowColor="@color/light_primary_color"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/signUpAccount"
        android:text="@string/no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnSignInNext"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="14dp"
        android:textSize="12sp"
        android:textColor="?attr/subTextColor" />

</androidx.constraintlayout.widget.ConstraintLayout>