<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".Activity.ForgetPasswordActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBarForgetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/baseline_arrow_back_24" />

    <TextView
        android:id="@+id/tvForgetPasswordTitle"
        android:text="@string/forget_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        android:textColor="?attr/colorPrimary"
        android:textSize="32sp"
        android:layout_marginTop="110dp" />

    <TextView
        android:id="@+id/tvForgetPasswordSub"
        android:text="@string/forget_password_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvForgetPasswordTitle"
        android:textColor="?attr/subTextColor"
        android:layout_marginTop="20dp"
        android:textAlignment="center" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForgetPasswordSub"
        android:layout_marginTop="40dp"
        app:hintTextColor="?attr/colorPrimary"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editForgetPasswordEmail"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:textColorHint="#7C8BA0"
            android:layout_height="wrap_content"
            android:background="@drawable/small_border"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnForgetPasswordNext"
        android:text="@string/continue_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailLayout"
        android:layout_marginTop="44dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="20sp"
        android:background="@drawable/small_border"
        android:backgroundTint="?attr/colorPrimary"
        android:drawablePadding="10dp"
        android:shadowColor="?attr/colorPrimary"
        android:textAllCaps="false" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="36dp"
            android:layout_height="4dp"
            android:background="?attr/colorPrimary" />

        <FrameLayout
            android:layout_width="36dp"
            android:layout_height="4dp"
            android:background="?attr/subBackgroundColorGray"
            android:layout_marginLeft="16dp" />

        <FrameLayout
            android:layout_width="36dp"
            android:layout_height="4dp"
            android:background="?attr/subBackgroundColorGray"
            android:layout_marginLeft="16dp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>