<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".Frontend.Activity.EnterOTPActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarEnterOTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/baseline_arrow_back_24" />

    <TextView
        android:id="@+id/tvEnterOTPTitle"
        android:text="@string/enter_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        android:textColor="?attr/colorPrimary"
        android:textSize="32sp"
        android:layout_marginTop="110dp" />

    <TextView
        android:id="@+id/tvEnterOTPSub"
        android:text="@string/enter_otp_message"
        android:textColor="?attr/subTextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEnterOTPTitle"
        android:layout_marginTop="20dp"
        android:textAlignment="center" />

    <RelativeLayout
        android:id="@+id/layoutOTPEntered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvEnterOTPSub"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/otp_edit_1"
            android:hint=" "
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:maxLength="1"
            android:inputType="number"
            android:background="@drawable/round_border" />

        <EditText
            android:id="@+id/otp_edit_2"
            android:hint=" "
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:maxLength="1"
            android:inputType="number"
            android:background="@drawable/round_border"
            android:layout_toRightOf="@id/otp_edit_1"
            android:layout_marginLeft="10dp" />

        <EditText
            android:id="@+id/otp_edit_3"
            android:hint=" "
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:maxLength="1"
            android:inputType="number"
            android:background="@drawable/round_border"
            android:layout_toRightOf="@id/otp_edit_2"
            android:layout_marginLeft="10dp" />

        <EditText
            android:id="@+id/otp_edit_4"
            android:hint=" "
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:maxLength="1"
            android:inputType="number"
            android:background="@drawable/round_border"
            android:layout_toRightOf="@id/otp_edit_3"
            android:layout_marginLeft="10dp" />

        <EditText
            android:id="@+id/otp_edit_5"
            android:hint=" "
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:maxLength="1"
            android:inputType="number"
            android:background="@drawable/round_border"
            android:layout_toRightOf="@id/otp_edit_4"
            android:layout_marginLeft="10dp" />

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnEnterOTPNext"
        android:text="@string/continue_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutOTPEntered"
        android:layout_marginTop="44dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:fontFamily="sans-serif-condensed"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="20sp"
        android:background="@drawable/small_border"
        android:backgroundTint="?attr/colorPrimary"
        android:drawablePadding="10dp"
        android:shadowColor="?attr/colorPrimary"
        android:textAllCaps="false" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="36dp"
            android:layout_height="4dp"
            android:background="?attr/subBackgroundColorGray" />

        <FrameLayout
            android:layout_width="36dp"
            android:layout_height="4dp"
            android:background="?attr/colorPrimary"
            android:layout_marginLeft="16dp" />

        <FrameLayout
            android:layout_width="36dp"
            android:layout_height="4dp"
            android:background="?attr/subBackgroundColorGray"
            android:layout_marginLeft="16dp" />

    </LinearLayout>

    <TextView
    android:text="@string/resend_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnEnterOTPNext"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>